# EstruturaDeDadosV2

./: CMakeLists.txt
data/: contacts.json
include/: cJSON.h  controller.h  model.h  nuklear.h
src/: contacts.json  controller.c  main.c  model.c  test_contacts.json  test_model.c
src/include/: contact_types.h  model.h
